# belajar_rust

./: .env  .gitignore  Cargo.toml  README.md  default.nix
migrations/: 20240502131018_table_user.down.sql  20240502131018_table_user.up.sql
src/: main.rs
