[package]
name = "rust_batch_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.5.1", features = [] }
dotenvy = "0.15.7"
sqlx = { version = "0.7.4", features = [
  "sqlx-postgres",
  "postgres",
  "runtime-tokio",
] }
